--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches: [ main ]
   workflow_dispatch:
+permissions:
+  contents: write
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
@@ -15,6 +17,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install mkdocs-material
+      - name: Configure Git
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
       - name: Build site
         run: mkdocs build --strict
       - name: Deploy to GitHub Pages
